--- a/index.html
+++ b/index.html
@@ -7,38 +7,26 @@
 </head>
 <body>
   <div class="container">
-    </div>
-  <h2>Ollie</h2>
+  
   <div class="nav">
   <h2>Ollie</h2>
   <ul>
-    <li>sign up</li>
-    <li>search bikes</li>
-    <li>reserve a bike</li>
-    <li>about us</li>
-  </ul>
-</div>
-  <ul>
-  <li>sign up</li>
-  <li>search bikes</li>
-  <li>reserve a bike</li>
-  <li>about us</li>
-</ul>
-  <h1>Ollie Bike Sharing</h1>
+  	<li>sign up</li>
+  	<li>search bikes</li>
+  	<li>reserve a bike</li>
+  	<li>about us</li>
+	</ul>
+    </div>
   <div class="main">
-  <h1>Ollie Bike Sharing</h1>
-  <h3>Share Your Pedals with the World.</h3>
-  <p>Easy-to-use, free bike sharing now available in 27 cities.</p>
-  <video width="320px" height="240" controls>
-    <source src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-1/ollie.mp4" type="video/mp4">
-  </video>
-</div>
-  <h3>Share Your Pedals with the World.</h3>
-  <p>Need a set of wheels while you're in town? Use Ollie to pair your perfect vacation with a stylish, affordable bike rental. Here is a <a href="cities.html">list</a> of cities where you can find us.</p>
+	<h1>Ollie Bike Sharing</h1>
+  <h3>Share your paddles with the world</h3>
+  <p>Need a set of wheels while you're in town? Use Ollie to pair your perfect 			vacation with a stylish, affordable bike rental.
+  Here is a <a href="cities.html">list</a> of cities where you can find us.</p>
+  
   <video width="320" height="240" controls>
   <source src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-1/ollie.mp4" type="video/mp4">
 </video>
-  
-
+    </div>
+    </div>
 </body>
 </html>
